src/components/header/Header.module.scss
.header {
  border-bottom: 1px solid #CFCFCF;
  position: fixed;
  width: 100%;
  background-color: #FFFFFF;

  &__container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1640px;
    padding: 19px 30px;
    margin: 0 auto;

    @media (max-width: 410px) {
      padding: 19px 30px 19px 20px;
    }
  }

  &__logo {
    font-size: 18px;

    span {
      font-size: 36px;
      font-weight: 700;
    }
  }

  &__icons {
    display: flex;
    align-items: center;
    gap: 22px;
  }

  &__cart {
    position: relative;
    margin-top: 8px;
    margin-right: 6px;

    &_count {
      position: absolute;
      width: 13px;
      height: 13px;
      border-radius: 50%;
      background-color: #3366FF;
      top: -3px;
      right: -6px;
      display: flex;
      align-items: center;
      justify-content: center;

      span {
        font-size: 10px;
        color: #FFFFFF;
      }
    }
  }

  &__burger {
    display: none;

    @media (width: 768px) {
      display: flex;
      margin-top: 4px;
    }
  }
}

